--- a/writings.html
+++ b/writings.html
@@ -21,14 +21,10 @@
   <img src="money.jpeg" alt="money" width="400" height="200">
   <p>Built something useful and high quality regardless of being competitive with others </p>
 
-  <p>Human intelligence had been improving, but they seems so much weaker than old generations, the mental problems end their lifespan before the reality or accident ends their life. </p>
+  <p>Human intelligence had been improving, but they seems so much weaker than old generations, mental problems shorten their lifespan before accidents ends their life. </p>
 
-  <p>Everyone has a full time job, Its called : human life. 
-  Dont love the country, Love Humanity. Dont hate the people, Hate the system</p>
-
-  <p>Our minds are like our houses,If you dont walk outside of your house 
-You dont know diversity exists and therefore conflicts, 
-Everyone has their own algorithms, Its the brain 🧠, Baby dont hack me, Dont hack me, No more… </p>
+<marquee><p>Our minds are like our houses,If you dont walk outside of your house, You dont know diversity exists and therefore conflicts, 
+Everyone has their own algorithms, Its the brain 🧠, Baby dont hack me, Dont hack me, No more… </p></marquee>
 
 <p>
 At the time of AI civilization, The most valuable skills: 
@@ -39,8 +35,6 @@ At the time of AI civilization, The most valuable skills:
 <br>Progamming 
 <br>*Creativity*
 </p>
-
-
-  </body>
+</body>
  
 
