--- a/writings.html
+++ b/writings.html
@@ -26,7 +26,7 @@
 <marquee><p>Our minds are like our houses,If you dont walk outside of your house, You dont know diversity exists and therefore conflicts, 
 Everyone has their own algorithms, Its the brain 🧠, Baby dont hack me, Dont hack me, No more… </p></marquee>
 
-<p>
+<p id="skills">
 At the time of AI civilization, The most valuable skills: 
 <br>Identifying root problem
 <br>Solving Conflicts 
