--- a/writings.html
+++ b/writings.html
@@ -28,12 +28,12 @@ Everyone has their own algorithms, Its the brain 🧠, Baby dont hack me, Dont h
 
 <p id="skills">
 At the time of AI civilization, The most valuable skills: 
-<br>Identifying root problem
-<br>Solving Conflicts 
-<br>Negotiations 
-<br>Educator  
-<br>Progamming 
-<br>*Creativity*
+Identifying root problem
+Solving Conflicts 
+Negotiations 
+Educator  
+Progamming 
+*Creativity*
 </p>
 
 
