--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
    <marquee width="60%" direction="down" height="100px">The brain worked in past, present and future</marquee>
    <marquee>human consciousness and unknown lifeforms: the alien and ais
    </marquee>
-   <img src="simulation.jpg" alt="simulation" width="300" height="200">
+   <img src="simulation.jpg" alt="simulation" width="300" height="200" align="middle">
 
   </body>
  
