--- a/writings.html
+++ b/writings.html
@@ -16,9 +16,9 @@
     Built something because you love,
     Not because you hate.
    </p>
-  <img src="alanturing.jpg" alt="alanturing" width="400" height="200">
-  <img src="weapons.jpg" alt="weapons" width="400" height="200">
-  <img src="money.jpeg" alt="money" width="400" height="200">
+  <img src="alanturing.jpg" alt="alanturing" width="400" height="200" align="middle">
+  <img src="weapons.jpg" alt="weapons" width="400" height="200" align="left">
+  <img src="money.jpeg" alt="money" width="400" height="200" align="right">
   <p>Built something useful and high quality regardless of being competitive with others </p>
 
   <p>Human intelligence had been improving, but they seems so much weaker than old generations, mental problems shorten their lifespan before accidents ends their life. </p>
