--- a/writings.html
+++ b/writings.html
@@ -16,7 +16,7 @@
     Built something because you love,
     Not because you hate.
    </p>
-  <img src="alanturing.jpg" alt="alanturing" width="400" height="200" align="middle">
+  <div id="alanturing"><img src="alanturing.jpg" alt="alanturing" width="400" height="200" align="middle"></div>
   <img src="weapons.jpg" alt="weapons" width="300" height="150" align="left">
   <img src="money.jpeg" alt="money" width="600" height="300" align="right">
   <p>Built something useful and high quality regardless of being competitive with others </p>
