--- a/writings.html
+++ b/writings.html
@@ -18,9 +18,9 @@
    </p>
   <img src="weapons.jpg" alt="weapons" width="300" height="150" align="left">
   <img src="money.jpeg" alt="money" width="600" height="300" align="right">
-  <p>Built something useful and high quality regardless of being competitive with others </p>
+  <!--<p>Built something useful and high quality regardless of being competitive with others </p>-->
 
-  <p>Human intelligence had been improving, but they seems so much weaker than old generations, mental problems shorten their lifespan before accidents ends their life. </p>
+  <!--<p>Human intelligence had been improving, but they seems so much weaker than old generations, mental problems shorten their lifespan before accidents ends their life. </p>-->
 
 <marquee><p>Our minds are like our houses,If you dont walk outside of your house, You dont know diversity exists and therefore conflicts, 
 Everyone has their own algorithms, Its the brain 🧠, Baby dont hack me, Dont hack me, No more… </p></marquee>
