--- a/writings.html
+++ b/writings.html
@@ -16,7 +16,7 @@
     Built something because you love,
     Not because you hate.
    </p>
-  <img src="money.jpeg" alt="money" width="600" height="300" align="right">
+  <img src="money.jpeg" alt="money" width="600" height="300" align="centre">
   <!--<p>Built something useful and high quality regardless of being competitive with others </p>-->
 
   <!--<p>Human intelligence had been improving, but they seems so much weaker than old generations, mental problems shorten their lifespan before accidents ends their life. </p>-->
