--- a/writings.html
+++ b/writings.html
@@ -11,7 +11,7 @@
     <a href="about.html">about</a>
     <a href="writings.html">writings</a>
    </nav>
-   <marquee>Welcome to the brain of hybrid consciousness</marquee>
+   <marquee><>Welcome to the brain of hybrid consciousness</marquee>
    <p>Love based engineering, 
     Built something because you love,
     Not because you hate.
@@ -21,7 +21,7 @@
 
   <!--<p>Human intelligence had been improving, but they seems so much weaker than old generations, mental problems shorten their lifespan before accidents ends their life. </p>-->
 
-<marquee><p>Our minds are like our houses,If you dont walk outside of your house, You dont know diversity exists and therefore conflicts, 
+<marquee><p id="mindhouse">Our minds are like our houses,If you dont walk outside of your house, You dont know diversity exists and therefore conflicts, 
 Everyone has their own algorithms, Its the brain 🧠, Baby dont hack me, Dont hack me, No more… </p></marquee>
 
 <p id="skills">
