--- a/writings.html
+++ b/writings.html
@@ -11,7 +11,7 @@
     <a href="about.html">about</a>
     <a href="writings.html">writings</a>
    </nav>
-   <marquee><>Welcome to the brain of hybrid consciousness</marquee>
+   <marquee>Welcome to the brain of hybrid consciousness</marquee>
    <p>Love based engineering, 
     Built something because you love,
     Not because you hate.
