--- a/writings.html
+++ b/writings.html
@@ -21,10 +21,10 @@
 
   <!--<p>Human intelligence had been improving, but they seems so much weaker than old generations, mental problems shorten their lifespan before accidents ends their life. </p>-->
 
-<marquee><p id="mindhouse">Our minds are like our houses,If you dont walk outside of your house, You dont know diversity exists and therefore conflicts, 
+<marquee><p class="mindhouse">Our minds are like our houses,If you dont walk outside of your house, You dont know diversity exists and therefore conflicts, 
 Everyone has their own algorithms, Its the brain 🧠, Baby dont hack me, Dont hack me, No more… </p></marquee>
 
-<p id="skills">
+<p class="skills">
 At the time of AI civilization, The most valuable skills: 
 Identifying root problem
 Solving Conflicts 
