--- a/writings.html
+++ b/writings.html
@@ -33,6 +33,15 @@ Educator
 Progamming 
 *Creativity*
 </p>
+<p class="skills">
+At the time of AI civilization, The most valuable skills: 
+Identifying root problem
+Solving Conflicts 
+Negotiations 
+Educator  
+Progamming 
+*Creativity*
+</p>
 
 
   </body>
