--- a/writings.html
+++ b/writings.html
@@ -33,14 +33,11 @@ Educator
 Progamming 
 *Creativity*
 </p>
-<p class="skills">
-At the time of AI civilization, The most valuable skills: 
-Identifying root problem
-Solving Conflicts 
-Negotiations 
-Educator  
-Progamming 
-*Creativity*
+<p class="lifespan">
+Human intelligence had been improving, 
+but they seems so much weaker than old generations,
+the mental problems end their lifespan before the reality 
+or accident ends their life.
 </p>
 
 
