--- a/writings.html
+++ b/writings.html
@@ -41,6 +41,13 @@ the mental problems end their lifespan before the reality
 or accident ends their life.
 </p>
 
+<p class="trippy">
+Menu:
+LSD
+Ayahuasca 
+Weed
+Meditation
+</p>
 
   </body>
  
