--- a/writings.html
+++ b/writings.html
@@ -42,13 +42,12 @@ or accident ends their life.
 </p>
 
 <p class="trippy">
-Menu:
+Consciousness Menu:
 LSD
 Ayahuasca 
 Weed
 Meditation
 </p>
-
-  </body>
+</body>
  
 
