--- a/writings.html
+++ b/writings.html
@@ -48,6 +48,14 @@ Ayahuasca
 Weed
 Meditation
 </p>
+
+<p class="love">
+What is love?
+Baby don’t hack me, 
+Don’t hack me, 
+No more… 
+</p>
+    
 </body>
  
 
