--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - A Pen by manicfung</title>
+  <title>manicfung make stuffz</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -12,7 +12,7 @@
 <html lang="en">
 <head>
 	  <meta charset="UTF-8">
-	  <title>manic-fun-art</title>
+	  <title>manicfung make stuffz</title>
     <link href='https://fonts.googleapis.com/css?family=Playfair Display' rel='stylesheet'>
 </head>
 
